fix(manifests): Add TrainJob support to Katib Openshift install
Signed-off-by: kramaranya <kramaranya15@gmail.com>

--- a/manifests/v1beta1/installs/katib-openshift/katib-config.yaml
+++ b/manifests/v1beta1/installs/katib-openshift/katib-config.yaml
@@ -5,6 +5,7 @@ init:
   controller:
     webhookPort: 8443
     trialResources:
+      - TrainJob.v1alpha1.trainer.kubeflow.org
       - Job.v1.batch
       - TFJob.v1.kubeflow.org
       - PyTorchJob.v1.kubeflow.org
