--- a/manifests/v1beta1/installs/katib-leader-election/katib-config.yaml
+++ b/manifests/v1beta1/installs/katib-leader-election/katib-config.yaml
@@ -8,6 +8,7 @@ init:
     webhookPort: 8443
     enableLeaderElection: true
     trialResources:
+      - TrainJob.v1alpha1.trainer.kubeflow.org
       - Job.v1.batch
       - TFJob.v1.kubeflow.org
       - PyTorchJob.v1.kubeflow.org
